tests/ide_unmerged_deps_dependents/file.js
// @flow

import {x} from './dependency';

x as number; // error
